infra/02_passport-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eas
  labels:
    name: eas
---
# Source: passport-svc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extprocfilter-passport-svc
  namespace: eas
  labels:
    helm.sh/chart: passport-svc-0.1.0
    app.kubernetes.io/name: passport-svc
    app.kubernetes.io/instance: extprocserver
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: passport-svc
    app.kubernetes.io/instance: extprocserver
---
# Source: passport-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extprocfilter-passport-svc
  namespace: eas
  labels:
    helm.sh/chart: passport-svc-0.1.0
    app.kubernetes.io/name: passport-svc
    app.kubernetes.io/instance: extprocserver
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-svc
      app.kubernetes.io/instance: extprocserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: passport-svc
        app.kubernetes.io/instance: extprocserver
    spec:
      serviceAccountName: extprocfilter-passport-svc
      securityContext:
        {}
      containers:
        - name: passport-svc
          securityContext:
            {}
          image: "passport-svc:latest"
          imagePullPolicy: Never
          ports:
            - name: grpc
              containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
