infra/03_istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway # working
    # istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dumper.local"
