infra/01_dumper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dumper-svc
  labels:
    app: dumper-svc
    service: dumper-svc
spec:
  type: ClusterIP
  ports:
  - name: echo-port
    port: 80
    targetPort: 8888
  selector:
    app: dumper-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumper-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dumper-svc
  template:
    metadata:
      labels:
        app: dumper-svc
    spec:
      containers:
      - name: dumper-svc
        image: dumper-svc
        imagePullPolicy: Never
        ports:
          - containerPort: 8888
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-ingress
spec:
  gateways:
  - istio-system/ingress
  hosts: 
  - dumper.local
  http:
  - route:
    - destination:
        #host: echoserver
        host: dumper-svc
        # port:
        #     number: 80
