infra/04_envoy-filter.yaml
# Source: http-server/templates/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: passport-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      filterClass: AUTHN 
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          failure_mode_allow: false
          async_mode: false
          processing_mode:
            request_header_mode: "SEND"
            response_header_mode: "SKIP"
            request_body_mode: "NONE"
            response_body_mode: "NONE"
            request_trailer_mode: "SKIP"
            response_trailer_mode: "SKIP"
          grpc_service:
              envoy_grpc:                  
                cluster_name: ext_proc_cluster
  - applyTo: CLUSTER
    match:
      cluster:
        service: extprocfilter-passport-svc.eas.svc.cluster.local
    patch:
      operation: ADD
      value:
        name: ext_proc_cluster
        type: STRICT_DNS
        connect_timeout: 5s
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: ext_proc_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: extprocfilter-passport-svc.eas.svc.cluster.local
                    port_value: 8081
